@@ -1,7 +1,7 @@
 {
   "development": {
 
-    "database": "database_development",
+    "database": "dota2picker",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
