@@ -1,0 +1,4 @@
+const db = require('./models')
+db.team.sync({
+  alter:true
+})
